<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/newbackground"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/DescriptionLogo"
            app:srcCompat="@drawable/dicee_logo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/left"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/left_dice"
                    app:srcCompat="@drawable/dice3" />

                <TextView
                    android:id="@+id/player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/player1"
                    android:textColor="#FFC107"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/right"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/right_dice"
                    app:srcCompat="@drawable/dice2" />

                <TextView
                    android:id="@+id/player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/player2"
                    android:textColor="#FFC107"
                    android:textSize="24sp" />

            </TableRow>

        </TableLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/message"
                android:textColor="#7DE10A"
                android:textSize="24sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="138dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/higher_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/btn_higher"
                android:textSize="13sp"
                app:backgroundTint="@android:color/tertiary_text_light" />

            <Button
                android:id="@+id/lower_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="@string/btn_lower"
                android:textSize="13sp"
                app:backgroundTint="@android:color/tertiary_text_light" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>